force-app/main/default/objects/Ticket__c/fields/Affected_Department__c.field-meta.xml
<CustomField>
    <fullName>Affected_Department__c</fullName>
    <label>Affected Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting/Finance</fullName>
            </value>
            <value>
                <fullName>AGUA</fullName>
            </value>
            <value>
                <fullName>Aquatics</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>Community Programs</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Executive Suite</fullName>
            </value>
            <value>
                <fullName>Guest Services</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Membership Billing</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>