force-app/main/default/objects/Ticket__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <formula>DATEVALUE( Date_Time_Closed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>