force-app/main/default/objects/Ticket__c/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>