force-app/main/default/objects/Ticket__c/fields/Date_Time_Work_Started__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Work_Started__c</fullName>
    <description>The date and time that the status was changed to In Progress</description>
    <inlineHelpText>The date and time that the status was changed to In Progress</inlineHelpText>
    <label>Date/Time Work Started</label>
    <type>DateTime</type>
</CustomField>