force-app/main/default/objects/Ticket__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF( !ISBLANK( Date_Time_Closed__c ),
 (DATEVALUE( Date_Time_Closed__c ) - DATEVALUE( Date_Time_Opened__c )),
 (TODAY() - DATEVALUE( Date_Time_Opened__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>