force-app/main/default/objects/Ticket__c/fields/Hours_Open__c.field-meta.xml
<CustomField>
    <fullName>Hours_Open__c</fullName>
    <description>The number of hours until the ticket was closed</description>
    <formula>IF( !ISBLANK( Date_Time_Closed__c ),
 (Date_Time_Closed__c - Date_Time_Opened__c) * 24,
 (NOW() - Date_Time_Opened__c) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of hours until the ticket was closed</inlineHelpText>
    <label>Hours Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>