force-app/main/default/objects/Ticket__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <description>The amount of hours spent working on this ticket. If multiple staff members contributed, this represents the average hours per staff member</description>
    <inlineHelpText>The amount of hours spent working on this ticket. If multiple staff members contributed, this represents the average hours per staff member</inlineHelpText>
    <label>Hours Worked</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>