force-app/main/default/objects/Ticket__c/fields/Number_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff__c</fullName>
    <description>The number of staff members that attended to this ticket</description>
    <inlineHelpText>The number of staff members that attended to this ticket</inlineHelpText>
    <label>Number of Staff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>