force-app/main/default/objects/Ticket__c/fields/Override_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Override_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>