force-app/main/default/objects/Ticket__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Child Tickets</relationshipLabel>
    <relationshipName>Child_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>