force-app/main/default/objects/Ticket__c/fields/Parent_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Status__c</fullName>
    <formula>TEXT( Parent_Ticket__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Ticket Status</label>
    <type>Text</type>
</CustomField>