force-app/main/default/objects/Ticket__c/fields/Parent_Ticket_Subject__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Subject__c</fullName>
    <formula>Parent_Ticket__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Ticket Subject</label>
    <type>Text</type>
</CustomField>