force-app/main/default/objects/Ticket__c/fields/Submitted_By_User__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets_Submitted</relationshipName>
    <type>Lookup</type>
</CustomField>