force-app/main/default/objects/Ticket__c/fields/Total_Staff_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_Hours__c</fullName>
    <description>Number of Staff multiplied by Hours Worked</description>
    <formula>Number_of_Staff__c * Hours_Worked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Staff multiplied by Hours Worked</inlineHelpText>
    <label>Total Staff Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>