force-app/main/default/objects/Ticket__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bug/Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>How To</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Merge Request</fullName>
            </value>
            <value>
                <fullName>Physical Error</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Project Request</fullName>
                <isActive>false</isActive>
                <label>Project Request</label>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Repair Request</fullName>
                <isActive>false</isActive>
                <label>Repair Request</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Software Error</fullName>
                <isActive>false</isActive>
                <label>Software Error</label>
            </value>
            <value>
                <fullName>Staff Updates</fullName>
            </value>
            <value>
                <fullName>System Access</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>