force-app/main/default/objects/Ticket__c/fields/Ultimate_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_ID__c</fullName>
    <description>The ID of the ticket at the top of this ticket&apos;s hierarchy</description>
    <formula>IF( ISBLANK( Parent_Ticket__c ),
 Id,
 IF( ISBLANK( Parent_Ticket__r.Parent_Ticket__c ),
  Parent_Ticket__c,
  Parent_Ticket__r.Parent_Ticket__c
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID of the ticket at the top of this ticket&apos;s hierarchy</inlineHelpText>
    <label>Ultimate Parent ID</label>
    <type>Text</type>
</CustomField>