force-app/main/default/objects/Ticket__c/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>true</active>
    <description>A request or issue related to a customer</description>
    <label>Customer Service</label>
</RecordType>