force-app/main/default/objects/Ticket__c/recordTypes/Engineering.recordType-meta.xml
<RecordType>
    <fullName>Engineering</fullName>
    <active>true</active>
    <description>Repairs, maintenance, and work orders</description>
    <label>Engineering</label>
</RecordType>