force-app/main/default/objects/Ticket__c/recordTypes/Housekeeping.recordType-meta.xml
<RecordType>
    <fullName>Housekeeping</fullName>
    <active>true</active>
    <label>Housekeeping</label>
</RecordType>