force-app/main/default/objects/Ticket__c/recordTypes/Technology.recordType-meta.xml
<RecordType>
    <fullName>Technology</fullName>
    <active>true</active>
    <description>Network, hardware, and business systems requests</description>
    <label>Technology</label>
</RecordType>