force-app/main/default/objects/Ticket__c/validationRules/DateTimeOpenedMustBeInThePast.validationRule-meta.xml
<ValidationRule>
    <fullName>DateTimeOpenedMustBeInThePast</fullName>
    <active>true</active>
    <description>The Date/Time Opened value can not be in the future</description>
    <errorConditionFormula>Date_Time_Opened__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Date_Time_Opened__c</errorDisplayField>
    <errorMessage>Date/Time Opened can not be in the future</errorMessage>
</ValidationRule>