force-app/main/default/objects/Ticket__c/validationRules/MaximumHierarchyDepthReached.validationRule-meta.xml
<ValidationRule>
    <fullName>MaximumHierarchyDepthReached</fullName>
    <active>true</active>
    <description>The maximum ticket hierarchy depth is 3</description>
    <errorConditionFormula>AND(
 !ISBLANK( Parent_Ticket__c ),
 !ISBLANK( Parent_Ticket__r.Parent_Ticket__c ),
 !ISBLANK( Parent_Ticket__r.Parent_Ticket__r.Parent_Ticket__c )
)</errorConditionFormula>
    <errorDisplayField>Parent_Ticket__c</errorDisplayField>
    <errorMessage>The maximum ticket hierarchy depth is 3</errorMessage>
</ValidationRule>