force-app/main/default/objects/Ticket__c/validationRules/PreferredContactMethodMustHaveAValue.validationRule-meta.xml
<ValidationRule>
    <fullName>PreferredContactMethodMustHaveAValue</fullName>
    <active>true</active>
    <description>A value must be provided for the preferred contact method</description>
    <errorConditionFormula>AND(
 !ISBLANK( TEXT( Preferred_Contact_Method__c ) ),
 OR(
  AND(
   ISPICKVAL( Preferred_Contact_Method__c, &quot;Email&quot; ),
   ISBLANK( Contact_Email__c )
  ),
  AND(
   ISPICKVAL( Preferred_Contact_Method__c, &quot;Phone&quot; ),
   ISBLANK( Contact_Phone__c )
  )
 )
)</errorConditionFormula>
    <errorMessage>Please provide a value for the preferred contact method</errorMessage>
</ValidationRule>