force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Date_Time_Closed__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>