force-app/main/default/objects/Ticket__c/listViews/Engineering_Tickets_Queue_Ticket.listView-meta.xml
<ListView>
    <fullName>Engineering_Tickets_Queue_Ticket</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Date_Time_Closed__c</columns>
    <columns>Type__c</columns>
    <columns>Facility__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Engineering Tickets Queue</label>
    <queue>Engineering_Tickets_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>