force-app/main/default/objects/Ticket__c/listViews/My_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold,Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ticket__c.Engineering</value>
    </filters>
    <label>My Open Tickets</label>
</ListView>