force-app/main/default/objects/Ticket__c/listViews/My_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Date_Time_Closed__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tickets</label>
</ListView>