force-app/main/default/objects/Ticket__c/listViews/Tickets_Closed_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Tickets_Closed_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Date_Time_Closed__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Date_Closed__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Tickets Closed - Last 7 Days</label>
</ListView>